# patolette

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh  pyproject.toml
lib/faiss/: CMakeLists.txt
lib/faiss/c_api/: Clustering_c.cpp  Clustering_c.h
lib/faiss/faiss/: CMakeLists.txt  Clustering.cpp  Clustering.h
lib/faiss/faiss/utils/distances_fused/: avx512.cpp
lib/include/: patolette.h
lib/include/array/: array.h  matrix2D.h  matrix3D.h  vector.h
lib/include/color/: CIELuv.h  ICtCp.h  eotf.h  rec2020.h  sRGB.h  xyz.h
lib/include/dither/: riemersma.h
lib/include/math/: eigen.h  lapack.h  lapacke_config.h  lapacke_mangling.h  linalg.h  misc.h  pca.h
lib/include/palette/: create.h  nearest.h  refine.h
lib/include/quantize/: cells.h  cluster.h  global.h  heuristics.h  local.h  sort.h
lib/src/: patolette.c
lib/src/array/: array.c  matrix2D.c  matrix3D.c  vector.c
lib/src/color/: CIELuv.c  ICtCp.c  eotf.c  rec2020.c  sRGB.c  xyz.c
lib/src/dither/: riemersma.c
lib/src/math/: eigen.c  pca.c
lib/src/palette/: create.c  nearest.c  refine.c
lib/src/quantize/: cells.c  cluster.c  global.c  local.c  sort.c
src/patolette/: __init__.py  __init__.pyi  patolette.pyx
