[build-system]
requires = ["scikit-build-core", "cython", "numpy"]
build-backend = "scikit_build_core.build"

[project]
name = "patolette"
dynamic = ["version"]
dependencies = ["numpy", "scipy", "scikit-image"]

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION.txt"
regex = '(?P<value>.+)'

[tool.scikit-build]
cmake.build-type = "Release"
# One of "generic", "avx2", "avx512", "avx512_spr", "sve"
cmake.args = ["-DOPT_LEVEL=generic"]